[gd_scene load_steps=10 format=3 uid="uid://b3edga7bj8n12"]

[ext_resource type="Script" path="res://table/player.gd" id="1_ivspx"]
[ext_resource type="Texture2D" uid="uid://cgei8xdcn8ptd" path="res://resources/table/blind_buttons.png" id="2_g6jrn"]
[ext_resource type="Texture2D" uid="uid://dsoa7b3088t1l" path="res://resources/table/deck.png" id="3_fb52s"]
[ext_resource type="Texture2D" uid="uid://djap6df1melon" path="res://resources/table/player_bg.png" id="4_y37wl"]
[ext_resource type="FontFile" uid="uid://c3j6oa1sotgmy" path="res://resources/monogram.ttf" id="5_q168y"]
[ext_resource type="Texture2D" uid="uid://7d5ngu5wdvqg" path="res://resources/table/big_chips.png" id="6_lhxvj"]
[ext_resource type="Texture2D" uid="uid://um5mcbswxtn1" path="res://resources/table/player_turn.png" id="7_a47hk"]

[sub_resource type="LabelSettings" id="LabelSettings_xb54d"]
font = ExtResource("5_q168y")
font_size = 55
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wf68b"]
font = ExtResource("5_q168y")
font_size = 87
font_color = Color(0, 0, 0, 1)

[node name="Player" type="Node2D"]
position = Vector2(65, 0)
script = ExtResource("1_ivspx")

[node name="BlindButton" type="Sprite2D" parent="."]
visible = false
position = Vector2(-47, 160)
texture = ExtResource("2_g6jrn")
region_enabled = true
region_rect = Rect2(0, 0, 36, 36)

[node name="Card1" type="Sprite2D" parent="."]
visible = false
position = Vector2(65, 90)
texture = ExtResource("3_fb52s")
region_enabled = true
region_rect = Rect2(0, 0, 130, 180)

[node name="Card2" type="Sprite2D" parent="."]
visible = false
position = Vector2(203, 90)
texture = ExtResource("3_fb52s")
region_enabled = true
region_rect = Rect2(0, 0, 130, 180)

[node name="StatusBlock" type="TextureRect" parent="."]
offset_left = 2.0
offset_top = 189.0
offset_right = 266.0
offset_bottom = 277.0
texture = ExtResource("4_y37wl")
metadata/_edit_use_anchors_ = true

[node name="StatusLabel" type="Label" parent="StatusBlock"]
layout_mode = 0
offset_left = 6.0
offset_top = -10.0
offset_right = 262.0
offset_bottom = 44.0
label_settings = SubResource("LabelSettings_xb54d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chips" type="Sprite2D" parent="StatusBlock"]
visible = false
position = Vector2(32, 61)
texture = ExtResource("6_lhxvj")
region_enabled = true
region_rect = Rect2(0, 0, 36, 36)

[node name="BalanceLabel" type="Label" parent="StatusBlock"]
layout_mode = 0
offset_left = 66.0
offset_top = 21.0
offset_right = 263.0
offset_bottom = 93.0
label_settings = SubResource("LabelSettings_wf68b")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TurnIndicator" type="TextureRect" parent="."]
visible = false
offset_left = 2.0
offset_top = 189.0
offset_right = 266.0
offset_bottom = 277.0
texture = ExtResource("7_a47hk")
